crates/alder-solve/tests/snapshots/inference__general_pattern_markup_match_alternatives_are_not_bindings.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Bool) {\n    <div>@match value { true => <span>yes</span>, false => <span>no</span> }</div>\n}\n"
---
render: fn(Bool) Html
