crates/alder-solve/tests/snapshots/inference__general_pattern_markup_match_uses_the_same_coverage_check.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Bool) {\n    <div>@match value { true => <span>yes</span> }</div>\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 10,
            },
            end: Position {
                line: 2,
                column: 51,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "false",
            ],
        },
        expectation: None,
    },
]
