crates/alder-solve/tests/snapshots/inference__general_pattern_missing_array_payload.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Array[Bool]) Number {\n    match value { [] => 0, [true, ..] => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 45,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "[false, ..]",
            ],
        },
        expectation: None,
    },
]
