crates/alder-solve/tests/snapshots/inference__general_pattern_missing_enum_case.snap
---
source: crates/alder-solve/tests/inference.rs
description: "enum Color { Red, Green, Blue }\nfn channel(value: Color) Number {\n    match value { Red => 0, Green => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 41,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "Blue",
            ],
        },
        expectation: None,
    },
]
