crates/alder-solve/tests/snapshots/inference__general_pattern_missing_option_case.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn unwrap(value: Option[Number]) Number {\n    match value { Some(number) => number }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 43,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "None",
            ],
        },
        expectation: None,
    },
]
