crates/alder-solve/tests/snapshots/inference__general_pattern_missing_record_combination.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: { a: Bool, b: Bool }) Number {\n    match value { { a: true, .. } => 0, { b: true, .. } => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 63,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "{ a: false, b: false }",
            ],
        },
        expectation: None,
    },
]
