crates/alder-solve/tests/snapshots/inference__general_pattern_missing_record_constructor_payload.snap
---
source: crates/alder-solve/tests/inference.rs
description: "enum State { Ready { active: Bool }, Waiting }\nfn render(value: State) Number {\n    match value { Ready { active: true } => 0, Waiting => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 62,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "Ready { active: false }",
            ],
        },
        expectation: None,
    },
]
