crates/alder-solve/tests/snapshots/inference__general_pattern_missing_tuple_combination.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: (Bool, Bool)) Number {\n    match value { (true, _) => 0, (_, true) => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 51,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "(false, false)",
            ],
        },
        expectation: None,
    },
]
