crates/alder-solve/tests/snapshots/inference__general_pattern_pin_does_not_complete_nested_coverage.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Option[Bool], pinned: Bool) Number {\n    match value { Some(^pinned) => 0, None => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 50,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "Some(_)",
            ],
        },
        expectation: None,
    },
]
