crates/alder-solve/tests/snapshots/inference__general_pattern_redundant_alternative.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Bool) Number {\n    match value { true | false | true => 0 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 34,
            },
            end: Position {
                line: 2,
                column: 38,
            },
        },
        kind: RedundantPattern {
            covering: [
                Region {
                    start: Position {
                        line: 2,
                        column: 19,
                    },
                    end: Position {
                        line: 2,
                        column: 23,
                    },
                },
            ],
        },
        expectation: None,
    },
]
